# OpenGlTries

OpenGLApplication/: OpenGLApplication.sln
OpenGLApplication/Include/: ogldev_lights_common.h
OpenGLApplication/Include/ImageMagick-6/Magick++/: Include.h
OpenGLApplication/Include/ImageMagick-6/magick/: attribute.h  channel.h  gem.h  pixel-accessor.h  policy.h  xml-tree.h
OpenGLApplication/Lib/: freeglut_static.lib  freeglut_staticd.lib  freeglutd.lib
OpenGLApplication/OpenGLApplication/: OpenGLApplication.vcxproj  OpenGLApplication.vcxproj.filters  main.cpp  math_3d.cpp  ogldev_basic_lighting.cpp  ogldev_lights_common.h  ogldev_math_3d.h
OpenGLApplication/OpenGLApplication/FreetypeGL/: font-manager.c  freetypeGL.cpp  texture-atlas.c  texture-font.c  texture-font.h  vertex-buffer.c
OpenGLApplication/OpenGLApplication/x64/Debug/: vc142.idb
OpenGLApplication/OpenGLApplication/x64/Debug/OpenGLAp.12499837.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLApplication.lastbuildstate
freeglutandglew/: CMakeLists.txt
learnOpenGL/: CMakeLists.txt  main.cpp
